13 June 2013: Matthijs
	- Use IPV6 minimum MTU settings with TCP to reduce failures that
	  are caused by delays in learning working PMTU when communicating
	  through a tunnel.

6 May 2013: Matthijs
	- Add rrl-slip config option (thanks Stephane Bortzmeyer).
	- Add rrl-ipv{4,6}-prefix-length config option.

3 May 2013: Wouter
	- update acx_nlnetlabs.m4 to v23, w32 fixes with no impact on NSD3.

24 April 2013: Matthijs
	- New config option "ip-transparent:", to bind to non local addresses
	  (thanks Arjen Zonneveld).

19 April 2013: Wouter
	- Own snprintf. Fix use of snprintf return value in debug print.

10 April 2013: Matthijs
	- Fix B64_NTOP/PTON replacement definitions in configure.ac.
	- Bug #496: Support for EUI498 and EUI64 RR types.

3 April 2013: Matthijs
	- Bug #494: Exit with return code 1 if socket code fails.
	- Bug #495: Wrong bufsize in dname_to_string for root domain.

26 March 2013: Wouter
	- updated lookup3 with endianness detection changes.

25 March 2013: Matthijs
	- RRtypes ASFDB, RP, RT should not compress dnames (thanks Peter
	  van Dijk).

7 February 2013: Matthijs
	- detect endianness in lookup3 on BSD, patch from Brad Smith.

6 February 2013: Matthijs
	- Fix outgoing-interface: Don't fail if family is IPv6 but
	  only IPv4 outgoing-interface is set, or vice versa.

4 February 2013: Matthijs
	- Bump to 3.2.16

29 January 2013: Matthijs
	- RRL documented in nsd.conf.sample

24 January 2013: Wouter
	- fix compile --disable-nsec3.

23 January 2013: Matthijs
	- Final code review thingies.
	- Tag 3.2.15

18 January 2013: Wouter
	- Fix spurious assertion in RRL for block.

16 January 2013: Matthijs
	- Code review Wouter
	- Only use config.h created in build dir.

3 January 2013: Matthijs
	- Bug #485: Fallback to DEFAULT_TTL if MSB is set.

2 January 2013: Matthijs
	- TSIG initialization only fails if no digests at all can be found.
	  Makes nsd perform better in FIPS mode, where there is no MD5.

28 December 2012: Matthijs